--- a/notes/derivatives.tex
+++ b/notes/derivatives.tex
@@ -310,9 +310,10 @@ for quadratic and cubic functions.
 The slope $m$ of a line is determined by
 \[m=\frac{y-y_1}{x-x_1}\]
 
-For a function $f$ differentiable at $a$, the slope $m=f'(a)$. We also
-know one of the points on the line-- $(a, f(a))$ (the point where the
-tangent line intersects with $f$). Plugging that in we get
+For a function $f$ differentiable at $a$, the slope of a tagent line
+at $a$ is $m=f'(a)$. We also know one of the points on the line--
+$(a, f(a))$ (the point where the tangent line intersects with $f$).
+Plugging that in we get
 \begin{align*}
   &f'(a)=\frac{y-f(a)}{x-a}\\
   &\implies y-f(a)=f'(a)(x-a)\\
