--- a/notes/derivatives.tex
+++ b/notes/derivatives.tex
@@ -44,7 +44,7 @@ domain of $f''$ is all points $a$ such that $f'$ is differentiable at
 $a$. If $f''(a)$ exists, we say $f$ is \textit{twice differentiable}
 at $a$.
 
-\subsection{Differentiability implies continuity}
+\subsection{Differentiability implies continuity}\label{diff-implies-cont}
 
 We are about to prove an important theorem-- that differentiability
 implies continuity. To do that, we begin with a convenient (simple)
