--- a/notes/differentiation.tex
+++ b/notes/differentiation.tex
@@ -1,6 +1,54 @@
 
 \section{Differentiation, Part I (Fundamentals)}
 
+We now prove theorems that make differentiation of a large class of
+functions easy.
+
+\vs
+
+\textbf{Theorem 1.} If $f(x)=c$ then $f'(a)=0$ for all $a$.
+
+\textbf{Proof:} we already proved this in the previous chapter.
+
+\vs\vs
+
+\textbf{Theorem 2.} If $f(x)=x$ then $f'(a)=1$ for all $a$.
+
+\textbf{Proof:}
+\[f'(a)=\lim_{h\to0}\frac{f(a+h)-f(a)}{h}=\lim_{h\to0}\frac{a+h-a}{h}=1\]
+
+\vs
+
+\textbf{Theorem 3.} If $f,g$ are differentiable at $a$, then
+$(f+g)'=f'(a)+g'(a)$.
+
+\textbf{Proof:}
+\begin{align*}
+  (f+g)'(a)&=\lim_{h\to0}\frac{(f+g)(a+h)-(f+g)(a)}{h}\\
+           &=\lim_{h\to0}\frac{f(a+h)+g(a+h)-f(a)-g(a)}{h}\\
+           &=\lim_{h\to0}\frac{f(a+h)-f(a)}{h} +
+             \lim_{h\to0}\frac{g(a+h)-g(a)}{h}\\
+           &=f'(a)+g'(a)
+\end{align*}
+
+\vs
+
+\textbf{Theorem 4.} If $f,g$ are differentiable at $a$, then
+\[(f\cdot g)'(a)=f'(a)\cdot g(a)+f(a)\cdot g'(a)\]
+
+\textbf{Proof:}
+\begin{align*}
+(f\cdot g)'(a)=&=\lim_{h\to0}\frac{(f\cdot g)(a+h)-(f\cdot g)(a)}{h}\\
+           &=\lim_{h\to0}\frac{f(a+h)g(a+h)-f(a)g(a)}{h}\\
+           &=\lim_{h\to0}\frac{f(a+h)g(a+h)-f(a)g(a) + f(a+h)g(a)-f(a+h)g(a)}{h}\\
+           &=\lim_{h\to0}\frac{f(a+h)(g(a+h)-g(a)) + g(a)(f(a+h) - f(a))}{h}\\
+           &=\lim_{h\to0}\left(f(a+h)\frac{g(a+h)-g(a)}{h}+g(a)\frac{f(a+h)-f(a)}{h}\right)\\
+           &=\lim_{h\to0}f(a+h)\cdot\lim_{h\to0}\frac{g(a+h)-g(a)}{h}+\lim_{h\to0}g(a)\cdot\lim_{h\to0}\frac{f(a+h)-f(a)}{h}\\
+           &=\lim_{h\to0}f(a+h)\cdot g'(a)+g(a)\cdot f'(a)
+\end{align*}
+Recall from \ref{diff-implies-cont} that $\lim_{h\to0}f(a+h)=f(a)$. Thus
+\[(f\cdot g)'(a)=f(a)\cdot g'(a)+g(a)\cdot f'(a)\]
+
 %%% Local Variables:
 %%% TeX-master: "notes"
 %%% End:
