--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -10,33 +10,57 @@
 
 I'm working through Spivak Calculus. Around the chapter on
 epsilon-delta limits the details get pretty confusing. I started
-supplementing with David Galvin's notes, which are considerabley more
-clear but are still confusing. This is surprising because the topic
-doesn't use anything beyond basic middle school math. Feels like it
-should be simple! And so I'm attempting to write these notes to
+supplementing with David Galvin's notes, which are often more clear
+but are still confusing. This is surprising because the topic of
+limits doesn't use anything beyond basic middle school math. Feels
+like it should be simple! And so I started writing these notes to
 properly understand the damned thing.
 
 \vs
 
-Spivak's chapters 7 (Three Hard Theorems) and 8 (Least Upper Bounds)
-are swapped in these notes. Spivak first introduces the Intermediate
-Value theorem and the Extreme Value theorem as facts, proves their
-consequences, then introduces completeness and its consequences, and
-finally proves IVT and EVT. I find it distracting and confusing. I
-introduce completeness and its consequences first. I then introduce
-and prove IVT and EVT, and cover their consequences. IMO this approach
-is much less confusing than Spivak's.
+Some departures from the structure of Spivak's text:
+\begin{itemize}
+\item In general each chapter in Spivak weaves between introducing
+  concepts, exploring degenerate cases, showing examples of practice
+  problems, and proving theorems. In my view this is delightful if you
+  already understand the material, but distracting if you're trying to
+  understand it for the first time. So instead I separate these
+  categories into clear sections. I introduce concepts and proofs as
+  quickly as possible (i.e. ``the blessed path''), then have a
+  separate section on edge cases, etc. I tend to skip and backtrack a
+  lot through Spivak's material. The order of these notes reflects the
+  order in which I internalized Spivak's text.
+\item This sometimes happens not only within a chapter, but also
+  across chapters. Chapters 7 (Three Hard Theorems) and 8 (Least Upper
+  Bounds) are swapped in these notes. Spivak first introduces the
+  Intermediate Value theorem and the Extreme Value theorem as facts,
+  then proves their consequences, then introduces completeness and its
+  consequences, and finally proves IVT and EVT. I find it distracting
+  and confusing. I introduce completeness and its consequences first.
+  I then introduce and prove IVT and EVT, and finally cover their
+  consequences. IMO this approach is much less confusing than
+  Spivak's.
+\end{itemize}
 
+\clearpage
 \tableofcontents
 
+\clearpage
 \input{limits.tex}
+\clearpage
 \input{limits2.tex}
+\clearpage
 \input{continuity.tex}
+\clearpage
 \input{completeness.tex}
+\clearpage
 \input{continuity2.tex}
+\clearpage
 \input{derivatives.tex}
-\input{differentiation.tex}
+\clearpage
 \input{derivatives2.tex}
+\clearpage
+\input{derivatives3.tex}
 
 \end{document}
 
