--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -22,6 +22,7 @@ chapter 5, so the homework problems are inlined in the notes.
 \input{ch7.tex}
 \input{ch8.tex}
 \input{ch9.tex}
+\input{ch10.tex}
 
 \end{document}
 
