--- a/notes/derivatives2.tex
+++ b/notes/derivatives2.tex
@@ -108,6 +108,13 @@ $a$, then $\lim_{h\to0}f(a+h)=f(a)$. Thus
 
 ---\vs
 
+\textbf{Theorems 1-5 imply}:
+\[(-f)'(a)=(-1\cdot f')(a)=-f'(a)\]
+\begin{center}and\end{center}
+\[(f-g)'(a)=(f+(-g))'(a)=f'(a)+(-g)'(a)=f'(a)-g'(a)\]
+
+---\vs
+
 \textbf{Theorem 6.} If $f(x)=x^n$ for $n\in\mathcal{N}$, then $f'(a)=na^{n-1}$ for
 all $a$.
 
@@ -386,16 +393,6 @@ Consider any $h$ with $|h|<\delta$.
 \end{align*}
 I.e. $\left|\phi(h)-f'(g(a))\right|<\epsilon$ as desired.
 \end{itemize}
-
-
-
-\subsection{Implications}
-Theorems 1-5 imply:
-\[(-f)'(a)=(-1\cdot f')(a)=-f'(a)\]
-\begin{center}and\end{center}
-\[(f-g)'(a)=(f+(-g))'(a)=f'(a)+(-g)'(a)=f'(a)-g'(a)\]
-
-\subsection{Trig}
 
 %%% Local Variables:
 %%% TeX-master: "notes"
